fix: fix NavBar-content overlap issue
Resolve #18.

--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,6 @@ body {
   margin-bottom: 2rem !important;
 }
 
-#nav-bar {
-  z-index: 10;
-}
-
 .ui.modal {
   margin-top: 0 !important;
 }
